syntax = "proto3";

package vecdb;

service VecdbService {
    rpc addDocuments (addDocRequest) returns (addDocResponse);
    rpc deleteDocuments (deleteDocRequest) returns (deleteDocResponse);
    rpc addNode (addNodeRequest) returns (addNodeResponse);
    rpc getNearest (getNearestRequest) returns (getNearestResponse);
}

message vectorType {
    repeated float e = 1;
}

// message matrixType {
//     repeated vectorType v = 1;
// }

message singleDocType {
    string _id = 1;
    vectorType vector = 2;
    bytes b64data = 3;
}

message addDocRequest {
    repeated singleDocType documents = 1;
}

message addDocResponse {
    bool status = 1;
    repeated string _id = 2;
}

message deleteDocRequest {
    repeated singleDocType documents = 1;
}

message deleteDocResponse {
    bool status = 1;
    repeated string _id = 2;
}

message addNodeRequest {
    repeated string peers = 1;
}

message addNodeResponse {
    bool status = 1;
    repeated string peers = 2;
}

message getNearestRequest {
    repeated vectorType matrix = 1;
    int32 k = 2;
}

message getNearestResponse {
    bool status = 1;
    repeated vectorType matrix = 2;
    bytes documents = 3;
}